--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ComparaTest",
+  "name": "ComparaTestFrontEnd",
   "version": "1.0.0",
   "description": "Compara test",
   "main": "index.js",
